--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Calculator</title>
-    <link rel="stylesheet" type="text/css" href="/MyCSS.css">
+    <link rel="stylesheet" type="text/css" href="MyCSS.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="script.js"></script>
 </head>
@@ -31,5 +31,5 @@
         <button class="number">.</button>
 
     </div>
-</body> 
+</body>
 </html>
